--- a/css/tintuc.css
+++ b/css/tintuc.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-.container {
+.container1 {
     min-height: 100vh;
     display: flex;
     justify-content: center;
